--- a/src/post/4.md
+++ b/src/post/4.md
@@ -1,13 +1,22 @@
 ---
-title: 'This is blogpost 4'
-date: 2020-10-28
-summary: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin feugiat viverra feugiat. Nulla mattis urna ac laoreet convallis. Mauris tempor lacinia condimentum. Fusce volutpat sollicitudin nunc, eu porttitor nulla varius non. Nam in sagittis purus, id volutpat turpis. Fusce nibh nulla, finibus sed enim vel, ullamcorper consectetur lectus. Donec sit amet augue augue. Proin eros lectus, pulvinar sit amet ligula ut, malesuada mattis sem. Mauris egestas tellus vitae quam pretium dictum hendrerit nec neque. Nullam id metus ultrices, tincidunt nisi in, congue arcu. Aliquam eu commodo massa. Fusce placerat orci vitae sollicitudin aliquet.'
-image: 'https://via.placeholder.com/500x250.png/FFFFFF/38373e?text=Blogpost 4'
+title: 'SOUL STUDIO Typography for Screen: Type in Motion'
+date: 2020-10-14
+summary: 'Typography for Screen introduces various creative projects of typography for the digital screen, such as motion graphics, webpage design, and conceptual experiments. This book explores typographic application in visual and information hierarchies within the digital screen environment.'
+image: '/img/typemotion.jpg'
 tags: ['tag4', 'tag6', 'tag7']
 ---
+! [Een afbeelding](/img/typemotion.jpg)
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin feugiat viverra feugiat. Nulla mattis urna ac laoreet convallis. Mauris tempor lacinia condimentum. Fusce volutpat sollicitudin nunc, eu porttitor nulla varius non. Nam in sagittis purus, id volutpat turpis. Fusce nibh nulla, finibus sed enim vel, ullamcorper consectetur lectus. Donec sit amet augue augue. Proin eros lectus, pulvinar sit amet ligula ut, malesuada mattis sem. Mauris egestas tellus vitae quam pretium dictum hendrerit nec neque. Nullam id metus ultrices, tincidunt nisi in, congue arcu. Aliquam eu commodo massa. Fusce placerat orci vitae sollicitudin aliquet.
 
-Nam nec efficitur nisl. Curabitur vitae tincidunt urna, sit amet placerat ipsum. Sed vitae augue ac ligula scelerisque bibendum non non leo. Nulla in fringilla nunc. Morbi elit ligula, scelerisque non ipsum eu, interdum pulvinar nulla. Nulla vitae imperdiet libero, ut ullamcorper odio. Quisque interdum dictum neque, vitae blandit dui blandit vel. Donec eu velit et ligula sodales consequat ut eget tellus. Cras elementum sed enim non semper. Fusce sodales sollicitudin odio, vitae hendrerit sem posuere nec. Nam a maximus diam, ac ultrices sem.
+Typography for Screen introduces various creative projects of typography for the digital screen, such as motion graphics, webpage design, and conceptual experiments. This book explores typographic application in visual and information hierarchies within the digital screen environment. Meanwhile, exclusive interviews in this book integrate different knowledge and design philosophies from the outstanding studios and designers, a true inspiration for designers and students. It includes QR codes with the links to the projects by the designers.
 
-Integer massa diam, pellentesque vitae luctus in, pulvinar quis dui. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed eu arcu in nisl efficitur sodales non et nisi. Nam eu nulla nibh. Aliquam eleifend quis mi nec ultrices. Vestibulum non imperdiet lacus. Fusce eget sagittis neque, eu imperdiet orci. Mauris dignissim ultricies neque, a posuere diam placerat ac. Mauris non sagittis velit. Nam interdum lectus ipsum, sit amet pulvinar metus facilisis at.
+<br>Book Specs: 210 x 285 mm, 240p <br>
+Format: full colour, Hardcover <br>
+Language: English
+
+<div class="grid">
+  <img  src="/img/type4.jpg">
+  <img  src="/img/type2.jpg">
+  <img  src="/img/type3.jpg">
+  <img  src="/img/type1.jpg">
+</div>
