--- a/src/post/6.md
+++ b/src/post/6.md
@@ -1,13 +1,22 @@
 ---
-title: 'This is blogpost 6'
-date: 2020-10-30
-summary: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin feugiat viverra feugiat. Nulla mattis urna ac laoreet convallis. Mauris tempor lacinia condimentum. Fusce volutpat sollicitudin nunc, eu porttitor nulla varius non. Nam in sagittis purus, id volutpat turpis. Fusce nibh nulla, finibus sed enim vel, ullamcorper consectetur lectus. Donec sit amet augue augue. Proin eros lectus, pulvinar sit amet ligula ut, malesuada mattis sem. Mauris egestas tellus vitae quam pretium dictum hendrerit nec neque. Nullam id metus ultrices, tincidunt nisi in, congue arcu. Aliquam eu commodo massa. Fusce placerat orci vitae sollicitudin aliquet.'
-image: 'https://via.placeholder.com/500x250.png/FFFFFF/38373e?text=Blogpost 6'
+title: 'KAWS: COMPANIONSHIP IN THE AGE OF LONELINESS'
+date: 2020-10-16
+summary: 'Working across art, fashion and design, he creates colour-filled paintings, murals, large-scale sculptures, street and public art, products, and streetwear. His work is infused with humour and humanity and is deeply tied to our times. KAWS draws his cast of characters from pop-culture animations to form a distinctive artistic vocabulary.'
+image: '/img/kaws2.png'
 tags: ['tag7', 'tag8','tag9']
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin feugiat viverra feugiat. Nulla mattis urna ac laoreet convallis. Mauris tempor lacinia condimentum. Fusce volutpat sollicitudin nunc, eu porttitor nulla varius non. Nam in sagittis purus, id volutpat turpis. Fusce nibh nulla, finibus sed enim vel, ullamcorper consectetur lectus. Donec sit amet augue augue. Proin eros lectus, pulvinar sit amet ligula ut, malesuada mattis sem. Mauris egestas tellus vitae quam pretium dictum hendrerit nec neque. Nullam id metus ultrices, tincidunt nisi in, congue arcu. Aliquam eu commodo massa. Fusce placerat orci vitae sollicitudin aliquet.
+! [Een afbeelding](/img/kaws2.png)
 
-Nam nec efficitur nisl. Curabitur vitae tincidunt urna, sit amet placerat ipsum. Sed vitae augue ac ligula scelerisque bibendum non non leo. Nulla in fringilla nunc. Morbi elit ligula, scelerisque non ipsum eu, interdum pulvinar nulla. Nulla vitae imperdiet libero, ut ullamcorper odio. Quisque interdum dictum neque, vitae blandit dui blandit vel. Donec eu velit et ligula sodales consequat ut eget tellus. Cras elementum sed enim non semper. Fusce sodales sollicitudin odio, vitae hendrerit sem posuere nec. Nam a maximus diam, ac ultrices sem.
+MORE ABOUT COMPANIONSHIP IN THE AGE OF LONELINESS
 
-Integer massa diam, pellentesque vitae luctus in, pulvinar quis dui. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed eu arcu in nisl efficitur sodales non et nisi. Nam eu nulla nibh. Aliquam eleifend quis mi nec ultrices. Vestibulum non imperdiet lacus. Fusce eget sagittis neque, eu imperdiet orci. Mauris dignissim ultricies neque, a posuere diam placerat ac. Mauris non sagittis velit. Nam interdum lectus ipsum, sit amet pulvinar metus facilisis at.
+KAWS is one of the most prominent and prolific artists of his generation.
+
+<br>Working across art, fashion and design, he creates colour-filled paintings, murals, large-scale sculptures, street and public art, products, and streetwear. His work is infused with humour and humanity and is deeply tied to our times. KAWS draws his cast of characters from pop-culture animations to form a distinctive artistic vocabulary.  
+
+<br>Featuring a new text by Margaret Atwood (The Handmaid’s Tale), a biographical essay by NGV Senior Curator of Contemporary Art, Dr Simon Maidment, and more than 200 images, including documentation of the career-survey exhibition KAWS: Companionship in the Age of Loneliness at the National Gallery of Victoria, this publication is a comprehensive overview of the artist's work to date.
+
+<br>Publisher: National Gallery of Victoria
+<br>325mm x 252mm, portrait, 350 pages, hardback
+<br>ISBN: 9781925432664
+<br>Published: December 2019
