--- a/src/post/10.md
+++ b/src/post/10.md
@@ -3,7 +3,7 @@ title: '10 things to know about KAWS'
 date: 2020-11-09
 summary: 'The artist is taking the art world by storm — his giant inflatables have graced a lake in Seoul and the Macy’s Thanksgiving Day Parade, his characters feature on T-shirts, and his paintings sell for eight-figure sums at auction.'
 image: '/img/kawsportret.png'
-tags: ['KAWS', 'art','tag10']
+tags: ['KAWS', 'figures']
 ---
 ![Een afbeelding](/img/kawsportret.png)
 
