--- a/src/post/2.md
+++ b/src/post/2.md
@@ -3,7 +3,7 @@ title: 'Daniel Arsham : Crystal Relic Nintendo Game Boy'
 date: 2020-10-12
 summary: ' This cast resin Game Boy is designed after the classic Nintendo hand held console, and even includes a matching Super Mario Brothers game cartridge that fits snugly into the Game Boy. No need to play games, add this coveted collectible to your collection now.'
 image: '/img/gameboy.jpg'
-tags: ['tag1', 'tag2', 'tag3']
+tags: ['Daniel Arsham', 'Crystal Relic']
 ---
 ![Een afbeelding](/img/gameboy.jpg)
 
