--- a/src/post/3.md
+++ b/src/post/3.md
@@ -3,9 +3,9 @@ title: 'Banksy : Flower Thrower'
 date: 2020-10-13
 summary: 'Rage, the Flower Thrower or Love is in the Air is one of the most iconic stencils by Banksy. It shows a masked Palestinian throwing a bouquet of flowers. Banksy is known for displaying his works out in the open for the public to view it, in places such as walls in the case of Rage, the Flower Thrower.'
 image: '/img/banksy1.jpg'
-tags: ['tag1', 'tag4', 'tag5']
+tags: ['Banksy', 'stencil', 'painting', 'Flower Thrower']
 ---
-! [Een afbeelding](/img/banksy1.jpg)
+![Een afbeelding](/img/banksy1.jpg)
 
 <b>Rage, the Flower Thrower or Love is in the Air is one of the most iconic stencils by Banksy. It shows a masked Palestinian throwing a bouquet of flowers.
 
