--- a/src/post/5.md
+++ b/src/post/5.md
@@ -4,9 +4,9 @@ date: 2020-10-15
 summary: 'Warp transitions - Image transition experiment using my laters renders in C4D. I also wanted to
 try out a fake 3D depth effect.'
 image: '/img/nathan1.png'
-tags: ['tag6', 'tag7', 'tag8']
+tags: ['Nathan Riley', '3D']
 ---
-! [Een afbeelding](/img/nathan1.png)
+![Een afbeelding](/img/nathan1.png)
 
 What he has to say about his work :
 
