--- a/src/post/6.md
+++ b/src/post/6.md
@@ -3,10 +3,10 @@ title: 'KAWS: COMPANIONSHIP IN THE AGE OF LONELINESS'
 date: 2020-10-16
 summary: 'Working across art, fashion and design, he creates colour-filled paintings, murals, large-scale sculptures, street and public art, products, and streetwear. His work is infused with humour and humanity and is deeply tied to our times. KAWS draws his cast of characters from pop-culture animations to form a distinctive artistic vocabulary.'
 image: '/img/kaws2.png'
-tags: ['tag7', 'tag8','tag9']
+tags: ['KAWS', 'book','National Gallery of Victoria']
 ---
 
-! [Een afbeelding](/img/kaws2.png)
+![Een afbeelding](/img/kaws2.png)
 
 MORE ABOUT COMPANIONSHIP IN THE AGE OF LONELINESS
 
