--- a/src/post/8.md
+++ b/src/post/8.md
@@ -3,7 +3,7 @@ title: 'The Art World: Kaws toys'
 date: 2020-10-18
 summary: 'Designer toys have permeated the contemporary art market recently in the last decade, giving room for urban artists to strive in a field that holds high prestige. Not everyone wants a boring painting that you spend a lot of time trying to interpret. Some people simply want something fun and relative. These Kaws toys play with our expectations and conformity.'
 image: '/img/kaws2blog.png'
-tags: ['tag8', 'tag9','tag10']
+tags: ['KAWS', 'figures']
 ---
 ![Een afbeelding](/img/kaws2blog.png)
 
