--- a/src/post/9.md
+++ b/src/post/9.md
@@ -3,7 +3,7 @@ title: 'Daniel Arsham'
 date: 2020-11-08
 summary: 'Some artists cannot be confined to a single medium. They mix formats, play with materials. They innovate. One such artist, Daniel Arsham, has built a career on dismantling the boundaries between sculpture, architecture, and performance. '
 image: '/img/danielarsham.jpg'
-tags: ['tag1', 'tag2','tag4']
+tags: ['Daniel Arsham','Crystal Relic','sculptures']
 ---
 ![Een afbeelding](/img/danielarsham.jpg)
 
