--- a/src/post/1.md
+++ b/src/post/1.md
@@ -3,9 +3,9 @@ title: 'KAWS - What Party Figure Orange'
 date: 2020-10-11
 summary: 'Shortly after releasing his much hyped KAWS Holiday Space Figures, the artist returned with a new figure titled KAWS What Party. The figure is a return of the fan-favorite Chum character, which originally debuted in 2002, and came in five colors: black, white, orange, pink, and yellow.'
 image: '/img/party.jpg'
-tags: ['tag1', 'tag2', 'tag3']
+tags: ['KAWS', 'figures']
 ---
 
-! [Een afbeelding](/img/party.jpg)
+![Een afbeelding](/img/party.jpg)
 
 Shortly after releasing his much hyped KAWS Holiday Space Figures, the artist returned with a new figure titled KAWS What Party. The figure is a return of the fan-favorite Chum character, which originally debuted in 2002, and came in five colors: black, white, orange, pink, and yellow. The release took place on the KAWSONE site on September 1st, 2020. Each figure had a retail price of $260 and sold out instantly, driving significant demand on StockX post-release. Each figure stands at 11.3 x 5.1 x 3.7 inches tall, and showcases the Chum character bent over in a saddened state. Place a Bid or Buy Now today to take home this one of a kind collectible from KAWS.
