--- a/src/post/4.md
+++ b/src/post/4.md
@@ -3,9 +3,9 @@ title: 'SOUL STUDIO Typography for Screen: Type in Motion'
 date: 2020-10-14
 summary: 'Typography for Screen introduces various creative projects of typography for the digital screen, such as motion graphics, webpage design, and conceptual experiments. This book explores typographic application in visual and information hierarchies within the digital screen environment.'
 image: '/img/typemotion.jpg'
-tags: ['tag4', 'tag6', 'tag7']
+tags: ['SOUL STUDIO', 'book', 'typography']
 ---
-! [Een afbeelding](/img/typemotion.jpg)
+![Een afbeelding](/img/typemotion.jpg)
 
 
 Typography for Screen introduces various creative projects of typography for the digital screen, such as motion graphics, webpage design, and conceptual experiments. This book explores typographic application in visual and information hierarchies within the digital screen environment. Meanwhile, exclusive interviews in this book integrate different knowledge and design philosophies from the outstanding studios and designers, a true inspiration for designers and students. It includes QR codes with the links to the projects by the designers.
