--- a/src/post/7.md
+++ b/src/post/7.md
@@ -3,14 +3,13 @@ title: 'KAWS: HE EATS ALONE'
 date: 2020-10-17
 summary: The solo show explores his career and vast oeuvre and features painting and sculpture made over the past 20 years. KAWS' imagery has long possessed a sophisticated, dark humour, revealing the interplay between art and consumerism, referencing both art history and pop culture.
 image: '/img/kawshea.jpg'
-tags: ['tag1', 'tag5','tag7']
+tags: ['KAWS', 'book','Doha']
 ---
-! [Een afbeelding](/img/kawshea.jpg)
+![Een afbeelding](/img/kawshea.jpg)
 
 The solo show explores his career and vast oeuvre and features painting and sculpture made over the past 20 years. KAWS' imagery has long possessed a sophisticated, dark humour, revealing the interplay between art and consumerism, referencing both art history and pop culture.
 
-<br>
-Donnelly began his career in street art in the 1990s, becoming synonymous with the name KAWS, a tag that became a staple in his ‘sub-vertisments' (modifications of commercial works). Later on, through his toy figurines and larger-than-life sculptures, KAWS has become a global phenomenon — not just of the art world, but in popular culture as well.
+<br> Donnelly began his career in street art in the 1990s, becoming synonymous with the name KAWS, a tag that became a staple in his ‘sub-vertisments' (modifications of commercial works). Later on, through his toy figurines and larger-than-life sculptures, KAWS has become a global phenomenon — not just of the art world, but in popular culture as well.
 
 
 <br>KAWS : HE EATS ALONE is presented at the Fire Station in Doha. The exhibition begins in the Garage Gallery where over 40 sculptures and paintings are displayed in a labyrinthine space designed by the New York studio 2×4. Across the courtyard above the café, the Archive showcases a collection of the artist's limited edition works. At the centre of the courtyard, the 5-metre-tall sculpture COMPANION (PASSING THROUGH) is seated with hands covering its eyes. The journey concludes at the Dhow Harbour on the Corniche, where the larger-than-life inflatable sculpture HOLIDAY reclines against the backdrop of the Doha city skyline.
