--- a/src/post/10.md
+++ b/src/post/10.md
@@ -76,4 +76,4 @@ tags: ['KAWS', 'figures']
 
 <br>In contrast, last November’s Post-War and Contemporary Art Evening Sale  at Christie’s in New York saw KAWS’ 2012 painting, CHUM (KCB7), sell for $2,412,500, almost five times its high estimate.
 
-<br>credit : https://www.christies.com/features/KAWS-artist-guide-9756-1.aspx
+<br>credits : <a href="https://www.christies.com/features/KAWS-artist-guide-9756-1.aspx"> https://www.christies.com </a>
