--- a/src/post/11.md
+++ b/src/post/11.md
@@ -63,3 +63,5 @@ tags: ['KAWS', 'figures']
 <br> “That’s what I’ve been fully working on every day. Recently, I was working on a new catalog with Phaidon and the exhibition layout, just thinking about kind of what loans can go into it… It’s tricky and we have to like focus on shows and look forward. But here at the same time knowing that so much has changed and there’s so many new things to consider with the flow of people in a space and sort of limited distancing that you need. And it really changes the way you approach an exhibition. And it kind of all happened halfway through it.”
 
 <br> “There’s not much I could divulge [for 2021]. Next year there’s a lot of stuff. Hopefully the world will kind of reopen and things can happen again, but I had a few really large projects this year get pushed over. Like the public art pieces; it’s a shame it couldn’t happen, but we’re aiming for next year.”
+
+credits : <a href="https://hypebeast.com/2020/12/kaws-2020-interview-ar-acute-app-apple-what-party-exhibition"> https://hypebeast.com </a>
