--- a/src/post/12.md
+++ b/src/post/12.md
@@ -15,3 +15,5 @@ tags: ['KAWS', 'figures']
 <br> Look for all three COMPANION 2020 figures to hit the KAWSONE webstore on December 17 at noon EST. A retail price has yet to be announced, but it’ll likely be in the neighborhood of $200-$220 USD.
 
 <br> In case you missed it, KAWS recently spoke to HYPEBEAST about his eventful 2020 — and he’s also set to present a massive career retrospective at the Brooklyn Museum in 2021.
+
+credits : <a href="https://hypebeast.com/2020/12/kaws-companion-20th-anniversary-face-down-figure-release-date"> https://hypebeast.com </a>
