--- a/src/post/3.md
+++ b/src/post/3.md
@@ -48,4 +48,4 @@ By the message relayed by this piece as well as the other events that can be lin
 <br>Nevertheless, this piece forces the viewers to consider why they would potentially want to hurl something harmful towards a group of other human beings if they could, instead, toss something useful their way. It makes everyone who sees it to consider the consequences of destructive actions by swapping this thought with what could happen if constructive action was taken instead. Rage, the Flower Thrower reframes the approach to dealing with evil, postulating that the way out can sometimes come from good.
 
 
-<br>credits : https://publicdelivery.org/banksy-flower-thrower/
+<br>credits : <a href="https://publicdelivery.org/banksy-flower-thrower/"> https://publicdelivery.org </a>
