--- a/src/post/8.md
+++ b/src/post/8.md
@@ -53,4 +53,4 @@ tags: ['KAWS', 'figures']
 
 <br>Negative thoughts aside, the genre has created a whole new community of art lovers. This brought in people who have never been interested in art. Kaws toys may have nudged open the door to the art market, but who walks through next is anyone’s guess.
 
-<br>credit : https://musartboutique.com/the-art-world-kaws-toys/
+<br>credits : <a href="https://musartboutique.com/the-art-world-kaws-toys/"> https://musartboutique.com </a>
