--- a/src/post/9.md
+++ b/src/post/9.md
@@ -74,4 +74,4 @@ tags: ['Daniel Arsham','Crystal Relic','sculptures']
 
 <br>In a time when technology can appear to develop and become obsolete in the space of a heartbeat, Daniel Arsham captures the ephemerality of our material world. He tells us a story about ourselves, what we make, and where we're heading even as we live it — or wear it.
 
-<br>credit : https://www.highsnobiety.com/p/daniel-arsham-biography/
+<br>credits : <a href="https://www.highsnobiety.com/p/daniel-arsham-biography/"> https://www.highsnobiety.com </a>
